--- a/deploy/dev-deployment.yaml
+++ b/deploy/dev-deployment.yaml
@@ -95,7 +95,7 @@ metadata:
       apiVersion: ambassador/v1
       kind:  Mapping
       name:  svc-insani-go-mapping
-      prefix: /v1/personal
+      prefix: /v1/insani
       rewrite: /public/api/v1
       service: svc-insani-go.hcm-dev
       timeout_ms: 15000
