--- a/deploy/stag-deployment.yaml
+++ b/deploy/stag-deployment.yaml
@@ -94,7 +94,7 @@ metadata:
       apiVersion: ambassador/v1
       kind:  Mapping
       name:  svc-insani-go-mapping
-      prefix: /v1/personal
+      prefix: /v1/insani
       rewrite: /public/api/v1
       service: svc-insani-go.hcm-stag
       timeout_ms: 15000
