--- a/deploy/prod-deployment.yaml
+++ b/deploy/prod-deployment.yaml
@@ -75,6 +75,8 @@ spec:
               value: "13000"
             - name: SLACK_WEBHOOK_URL
               value: "https://hooks.slack.com/services/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"
+            - name: URL_HCM_SIMPEG_SERVICE
+            value: "https://saladin-dev.uii.ac.id/v1/simpeg-ora"
 
 
 ---
