--- a/deploy/prod-deployment.yaml
+++ b/deploy/prod-deployment.yaml
@@ -40,9 +40,9 @@ spec:
             - name: DBMS
               value: "mysql"
             - name: DB_USER
-              value: "hcmpersonal_app"
+              value: "hcminsani_app"
             - name: DB_PASSWORD
-              value: "ayvSYKtr4TeJp8tcnyQw"
+              value: "Lp8kWCUt89qJ9Kd74QtC"
             - name: DB_HOST
               value: "dbproduction.bsi.io"
             - name: DB_PORT
@@ -64,7 +64,7 @@ spec:
             - name: MINIO_SSL
               value: "false"
             - name: MINIO_BUCKETNAME
-              value: "personal"
+              value: "insani"
             - name: MINIO_LOCATION
               value: "us-east-1"
             - name: MINIO_CONN_TIMEOUT
