Add presence v2 URL and update employee status handling

--- a/deploy/stag-deployment.yaml
+++ b/deploy/stag-deployment.yaml
@@ -88,6 +88,8 @@ spec:
               value: "https://hooks.slack.com/services/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"
             - name: URL_HCM_SIMPEG_SERVICE
               value: "http://svc-simpeg-ora-lumen.hcm-stag.svc.cluster.local"
+            - name: URL_V2_PRESENCE_SERVICE
+              value: "http://svc-presence-lumen.hcm-stag.svc.cluster.local"
 
 ---
 apiVersion: v1
