--- a/deploy/prod-deployment.yaml
+++ b/deploy/prod-deployment.yaml
@@ -83,6 +83,8 @@ spec:
               value: "https://hooks.slack.com/services/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"
             - name: URL_HCM_SIMPEG_SERVICE
               value: "http://svc-simpeg-ora-lumen.hcm-production.svc.cluster.local"
+            - name: URL_V2_PRESENCE_SERVICE
+              value: "http://svc-presence-lumen.hcm-production.svc.cluster.local"
 
 
 ---
