--- a/docker-compose.example.yml
+++ b/docker-compose.example.yml
@@ -12,7 +12,7 @@ services:
       DB_PASSWORD: root
       DB_HOST: localhost
       DB_PORT: 6033
-      DB_NAME: example_schema
+      DB_NAME: your_database
       DB_MAX_OPEN_CONNECTION: 10
       DB_MAX_IDLE_CONNECTION: 5
       DB_MAX_CONNECTION_LIFETIME: 300s
