--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,8 +36,7 @@ sonarqube_scan:
 
 compile_main:
   stage: compile
-  # image: asia.gcr.io/uii-cloud-project/hcm/go/golang:1.17-ubuntu
-  image: asia.gcr.io/uii-cloud-project/hcm/docker/ubuntu:latest
+  image: asia.gcr.io/uii-cloud-project/hcm/go/golang:1.17-ubuntu
   before_script:
     - export GOPATH=$(dirname $CI_PROJECT_DIR)/go
       && mkdir -p $GOPATH/src
