update deploy staging and prod

--- a/deploy/prod-deployment.yaml
+++ b/deploy/prod-deployment.yaml
@@ -88,7 +88,7 @@ spec:
             - name: URL_ACTIVATION_PERSONAL
               value: "http://svc-personal-go.hcm-production.svc.cluster.local"
             - name: URL_HCM_TANGGUNGAN
-              value: "http://svc-dependents-go.hcm-dev.svc.cluster.local/private/api/v1/tanggungan-private"
+              value: "http://svc-dependents-go.hcm-production.svc.cluster.local/private/api/v1/tanggungan-private"
 
 ---
 apiVersion: v1
@@ -108,7 +108,7 @@ metadata:
       prefix: /v1/insani
       rewrite: /public/api/v1
       service: svc-insani-go.hcm-production
-      timeout_ms: 15000
+      timeout_ms: 21000
 spec:
   selector:
     svc: svc-insani-go
