--- a/deploy/stag-deployment.yaml
+++ b/deploy/stag-deployment.yaml
@@ -93,7 +93,7 @@ spec:
             - name: URL_ACTIVATION_PERSONAL
               value: "http://svc-personal-go.hcm-stag.svc.cluster.local"
             - name: URL_HCM_TANGGUNGAN
-              value: "http://svc-dependents-go.hcm-dev.svc.cluster.local/private/api/v1/tanggungan-private"
+              value: "http://svc-dependents-go.hcm-stag.svc.cluster.local/private/api/v1/tanggungan-private"
 
 ---
 apiVersion: v1
