--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -19,19 +19,19 @@ variables:
   GIT_SSL_NO_VERIFY: "true"
 
 sonarqube_scan:
- stage: analysis
- image: sonarsource/sonar-scanner-cli:latest
- script:
+  stage: analysis
+  image: sonarsource/sonar-scanner-cli:latest
+  script:
     - >
-     sonar-scanner
-     -Dsonar.projectKey=$CI_PROJECT_PATH
-     -Dsonar.sources=$SONAR_SOURCES
-     -Dsonar.scm.provider=git
-     -Dsonar.exclusions='vendor/**'
-     -Dsonar.qualitygate.wait=true
- only:
+      sonar-scanner
+      -Dsonar.projectKey=$CI_PROJECT_NAME
+      -Dsonar.sources=$SONAR_SOURCES
+      -Dsonar.scm.provider=git
+      -Dsonar.exclusions='vendor/**'
+      -Dsonar.qualitygate.wait=true
+  only:
     - develop
- tags:
+  tags:
     - untag
 
 compile_main:
