--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -28,7 +28,7 @@ sonarqube_scan:
       -Dsonar.sources=$SONAR_SOURCES
       -Dsonar.scm.provider=git
       -Dsonar.exclusions='vendor/**'
-      -Dsonar.qualitygate.wait=false
+      -Dsonar.qualitygate.wait=true
   only:
     - develop
   tags:
