--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,14 @@
 stages:
   - analysis
-  - compile
   - build
   - deploy
 
 variables:
-  # Docker image building for GCR
-  VERSIONED_IMAGE: ${GCP_PROJECT_ID}/${CI_PROJECT_PATH}:${CI_COMMIT_SHORT_SHA}
-  VERSIONED_IMAGE_TAG: ${GCP_PROJECT_ID}/${CI_PROJECT_PATH}:${CI_COMMIT_TAG}
-  # Kubernetes deployment
-  DEPLOYED_IMAGE: ${CI_PROJECT_NAME}:${CI_COMMIT_SHORT_SHA}
-  DEPLOYED_IMAGE_TAG: ${CI_PROJECT_NAME}:${CI_COMMIT_TAG}
-  DEV_IMAGE: ${CI_PROJECT_NAME}:dev
-  STAG_IMAGE: ${CI_PROJECT_NAME}:stag
-  PROD_IMAGE: ${CI_PROJECT_NAME}:prod
-  # Sonarqube
+  VERSIONED_IMAGE: ${REGISTRY_SERVER}/${CI_PROJECT_PATH}:${CI_COMMIT_SHORT_SHA}
+  VERSIONED_IMAGE_TAG: ${REGISTRY_SERVER}/${CI_PROJECT_PATH}:${CI_COMMIT_TAG}
   SONAR_SOURCES: "."
   GIT_SSL_NO_VERIFY: "true"
+  GIT_DEPTH: 5
 
 sonarqube_scan:
   stage: analysis
@@ -28,54 +20,27 @@ sonarqube_scan:
       -Dsonar.sources=$SONAR_SOURCES
       -Dsonar.scm.provider=git
       -Dsonar.exclusions='vendor/**'
-      -Dsonar.qualitygate.wait=false
-  only:
-    - develop
+      -Dsonar.qualitygate.wait=true
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "develop"'
   tags:
     - untag
 
-compile_main:
-  stage: compile
-  image: asia.gcr.io/uii-cloud-project/hcm/go/golang:1.17-ubuntu
-  before_script:
-    - export GOPATH=$(dirname $CI_PROJECT_DIR)/go
-      && mkdir -p $GOPATH/src
-      && cd $GOPATH/src
-      && ln -s $CI_PROJECT_DIR
-      && cd $CI_PROJECT_NAME
-    - go env
-  script:
-    - sh deploy/build_go.sh
-  artifacts:
-    name: ${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}
-    paths:
-      - Dockerfile
-      - deploy/
-      - main
-    expire_in: 10 min
-  only:
-    - develop
-    - /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/ # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
-    - /^(\d+\.)(\d+\.)(\d+)$/ # match X.Y.Z tag format, ex: 1.0.0
-  tags:
-    - compile
-
 build_development:
   stage: build
-  variables:
-    GIT_STRATEGY: none
-  image: gcr.io/kaniko-project/executor:debug
+  image:
+    name: gcr.io/kaniko-project/executor:v1.14.0-debug
+    entrypoint: [""]
   script:
-    - mkdir -p "${GOOGLE_APPLICATION_CREDENTIALS%/*}"
-    - echo $KANIKO_SECRET | base64 -d > $GOOGLE_APPLICATION_CREDENTIALS
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE
+    - echo $KANIKO_SECRET | base64 -d > /kaniko/.docker/config.json
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE --skip-tls-verify
   artifacts:
     name: $CI_COMMIT_REF_NAME
     paths:
       - deploy/
     expire_in: 60 sec
-  only:
-    - develop
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "develop"'
   tags:
     - build
 
@@ -83,35 +48,34 @@ deploy_development:
   stage: deploy
   variables:
     GIT_STRATEGY: none
-  image: asia.gcr.io/uii-cloud-project/panduba/alpine:3.11-kubectl.1
+  image: registry.uii.ac.id/uii-project/interoperability/os/alpine:3.11-kubectl.1
   script:
     - echo $KUBE_CONFIG | base64 -d > /.kube/config
     - kubectl config use-context dev
-    - sed -ri s/${DEV_IMAGE}/${DEPLOYED_IMAGE}/ deploy/dev-deployment.yaml
+    - sed -ri s#images#${VERSIONED_IMAGE}# deploy/dev-deployment.yaml
+    - sed -ri s#project-name#${CI_PROJECT_NAME}# deploy/dev-deployment.yaml
+    - sed -ri s#namespaces#${CI_PROJECT_ROOT_NAMESPACE}-dev# deploy/dev-deployment.yaml
     - kubectl apply -f deploy/dev-deployment.yaml
   dependencies:
     - build_development
-  only:
-    - develop
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "develop"'
   tags:
     - deploy
 
 build_staging:
   stage: build
-  variables:
-    GIT_STRATEGY: none
-  image: gcr.io/kaniko-project/executor:debug
+  image: gcr.io/kaniko-project/executor:v1.14.0-debug
   script:
-    - mkdir -p "${GOOGLE_APPLICATION_CREDENTIALS%/*}"
-    - echo $KANIKO_SECRET | base64 -d > $GOOGLE_APPLICATION_CREDENTIALS
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE_TAG
+    - echo $KANIKO_SECRET | base64 -d > /kaniko/.docker/config.json
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE_TAG --skip-tls-verify
   artifacts:
     name: $CI_COMMIT_REF_NAME
     paths:
       - deploy/
     expire_in: 60 sec
-  only:
-    - /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/ # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/' # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
   tags:
     - build
 
@@ -119,35 +83,34 @@ deploy_staging:
   stage: deploy
   variables:
     GIT_STRATEGY: none
-  image: asia.gcr.io/uii-cloud-project/panduba/alpine:3.11-kubectl.1
+  image: registry.uii.ac.id/uii-project/interoperability/os/alpine:3.11-kubectl.1
   script:
     - echo $KUBE_CONFIG | base64 -d > /.kube/config
     - kubectl config use-context staging
-    - sed -ri s/${STAG_IMAGE}/${DEPLOYED_IMAGE_TAG}/ deploy/stag-deployment.yaml
+    - sed -ri s#images#${VERSIONED_IMAGE_TAG}# deploy/stag-deployment.yaml
+    - sed -ri s#project-name#${CI_PROJECT_NAME}# deploy/stag-deployment.yaml
+    - sed -ri s#namespaces#${CI_PROJECT_ROOT_NAMESPACE}-stag# deploy/stag-deployment.yaml
     - kubectl apply -f deploy/stag-deployment.yaml
   dependencies:
     - build_staging
-  only:
-    - /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/ # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/' # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
   tags:
     - deploy
 
 build_production:
   stage: build
-  variables:
-    GIT_STRATEGY: none
-  image: gcr.io/kaniko-project/executor:debug
+  image: gcr.io/kaniko-project/executor:v1.14.0-debug
   script:
-    - mkdir -p "${GOOGLE_APPLICATION_CREDENTIALS%/*}"
-    - echo $KANIKO_SECRET | base64 -d > $GOOGLE_APPLICATION_CREDENTIALS
-    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE_TAG
+    - echo $KANIKO_SECRET | base64 -d > /kaniko/.docker/config.json
+    - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE_TAG --skip-tls-verify
   artifacts:
     name: $CI_COMMIT_REF_NAME
     paths:
       - deploy/
     expire_in: 60 sec
-  only:
-    - /^(\d+\.)(\d+\.)(\d+)$/ # match X.Y.Z tag format, ex: 1.0.0
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+)$/' # match X.Y.Z tag format, ex: 1.0.0
   tags:
     - build
 
@@ -155,15 +118,17 @@ deploy_production:
   stage: deploy
   variables:
     GIT_STRATEGY: none
-  image: asia.gcr.io/uii-cloud-project/panduba/alpine:3.11-kubectl.1
+  image: registry.uii.ac.id/uii-project/interoperability/os/alpine:3.11-kubectl.1
   script:
     - echo $KUBE_CONFIG | base64 -d > /.kube/config
     - kubectl config use-context production
-    - sed -ri s/${PROD_IMAGE}/${DEPLOYED_IMAGE_TAG}/ deploy/prod-deployment.yaml
+    - sed -ri s#images#${VERSIONED_IMAGE_TAG}# deploy/prod-deployment.yaml
+    - sed -ri s#project-name#${CI_PROJECT_NAME}# deploy/prod-deployment.yaml
+    - sed -ri s#namespaces#${CI_PROJECT_ROOT_NAMESPACE}-production# deploy/prod-deployment.yaml
     - kubectl apply -f deploy/prod-deployment.yaml
   dependencies:
     - build_production
-  only:
-    - /^(\d+\.)(\d+\.)(\d+)$/ # match X.Y.Z tag format, ex: 1.0.0
+  rules:
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+)$/' # match X.Y.Z tag format, ex: 1.0.0
   tags:
     - deploy
