--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,6 @@
 stages:
   - analysis
+  - compile
   - build
   - deploy
 
@@ -9,7 +10,7 @@ variables:
   SONAR_SOURCES: "."
   GIT_SSL_NO_VERIFY: "true"
   GIT_DEPTH: 5
-
+  
 sonarqube_scan:
   stage: analysis
   image: sonarsource/sonar-scanner-cli:latest
@@ -25,6 +26,32 @@ sonarqube_scan:
     - if: '$CI_COMMIT_BRANCH == "develop"'
   tags:
     - untag
+    
+compile_main:
+  stage: compile
+  image: golang:1.17
+  before_script:
+    - export GOPATH=$(dirname $CI_PROJECT_DIR)/go
+      && mkdir -p $GOPATH/src
+      && cd $GOPATH/src
+      && ln -s $CI_PROJECT_DIR
+      && cd $CI_PROJECT_NAME
+    - go env
+  script:
+    - go build -o main
+  artifacts:
+    name: ${CI_JOB_NAME}_${CI_COMMIT_REF_NAME}
+    paths:
+      - Dockerfile
+      - deploy/
+      - main
+    expire_in: 10 min
+  only:
+    - develop
+    - /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/ # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
+    - /^(\d+\.)(\d+\.)(\d+)$/ # match X.Y.Z tag format, ex: 1.0.0
+  tags:
+    - compile
 
 build_development:
   stage: build
@@ -65,7 +92,9 @@ deploy_development:
 
 build_staging:
   stage: build
-  image: gcr.io/kaniko-project/executor:v1.14.0-debug
+  image:
+    name: gcr.io/kaniko-project/executor:v1.14.0-debug
+    entrypoint: [""]
   script:
     - echo $KANIKO_SECRET | base64 -d > /kaniko/.docker/config.json
     - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE_TAG --skip-tls-verify
@@ -75,7 +104,7 @@ build_staging:
       - deploy/
     expire_in: 60 sec
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/' # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/'   # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
   tags:
     - build
 
@@ -94,13 +123,15 @@ deploy_staging:
   dependencies:
     - build_staging
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/' # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+\-(alpha|beta|rc)\d+)$/'   # match X.Y.Z-alpha/beta/rcN tag format, ex: 0.1.0-alpha0
   tags:
     - deploy
 
 build_production:
   stage: build
-  image: gcr.io/kaniko-project/executor:v1.14.0-debug
+  image:
+    name: gcr.io/kaniko-project/executor:v1.14.0-debug
+    entrypoint: [""]
   script:
     - echo $KANIKO_SECRET | base64 -d > /kaniko/.docker/config.json
     - /kaniko/executor --context $CI_PROJECT_DIR --dockerfile $CI_PROJECT_DIR/Dockerfile --destination $VERSIONED_IMAGE_TAG --skip-tls-verify
@@ -110,7 +141,7 @@ build_production:
       - deploy/
     expire_in: 60 sec
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+)$/' # match X.Y.Z tag format, ex: 1.0.0
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+)$/'   # match X.Y.Z tag format, ex: 1.0.0
   tags:
     - build
 
@@ -129,6 +160,6 @@ deploy_production:
   dependencies:
     - build_production
   rules:
-    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+)$/' # match X.Y.Z tag format, ex: 1.0.0
+    - if: '$CI_COMMIT_TAG =~ /^(\d+\.)(\d+\.)(\d+)$/'   # match X.Y.Z tag format, ex: 1.0.0
   tags:
     - deploy
