--- a/deploy/prod-deployment.yaml
+++ b/deploy/prod-deployment.yaml
@@ -2,36 +2,41 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: svc-insani-go
+  name: project-name
   labels:
-    svc: svc-insani-go
+    svc: project-name
     tier: backend
-  namespace: hcm-production
+  namespace: namespaces
 spec:
-  minReadySeconds: 5
+  replicas: 1
   selector:
     matchLabels:
-      svc: svc-insani-go
+      svc: project-name
       tier: backend
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxSurge: 1
+      maxUnavailable: 0
   revisionHistoryLimit: 5
   template:
     metadata:
       labels:
-        svc: svc-insani-go
+        svc: project-name
         tier: backend
     spec:
       imagePullSecrets:
-        - name: gcr-uii-key
+        - name: harbor-uii-key
       containers:
-        - name: svc-insani-go
-          image: asia.gcr.io/uii-cloud-project/hcm/backend/svc-insani-go:prod
-          imagePullPolicy: Always
+        - name: project-name
+          image: images
+          imagePullPolicy: IfNotPresent
           resources:
             requests:
               cpu: 100m
-              memory: 64Mi
-            limits:
               memory: 128Mi
+            limits:
+              memory: 256Mi
           ports:
             - name: http-api
               containerPort: 80
@@ -88,16 +93,15 @@ spec:
               value: "http://svc-personal-go.hcm-production.svc.cluster.local"
             - name: URL_HCM_TANGGUNGAN
               value: "http://svc-dependents-go.hcm-production.svc.cluster.local/private/api/v1/tanggungan-private"
-
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: svc-insani-go
+  name: project-name
   labels:
-    svc: svc-insani-go
+    svc: project-name
     tier: backend
-  namespace: hcm-production
+  namespace: namespaces
   annotations:
     getambassador.io/config: |
       ---
@@ -113,7 +117,7 @@ metadata:
         hostname: '*'
 spec:
   selector:
-    svc: svc-insani-go
+    svc: project-name
     tier: backend
   type: NodePort
   ports:
@@ -122,19 +126,25 @@ spec:
       targetPort: http-api
       protocol: TCP
 ---
-apiVersion: autoscaling/v1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
   labels:
-    svc: svc-insani-go
+    svc: project-name
     tier: backend
-  name: svc-insani-go
-  namespace: hcm-production
+  name: project-name
+  namespace: namespaces
 spec:
-  maxReplicas: 5
   minReplicas: 1
+  maxReplicas: 2
+  metrics:
+    - resource:
+        name: cpu
+        target:
+          averageUtilization: 50
+          type: Utilization
+      type: Resource
   scaleTargetRef:
-    apiVersion: apps/v1beta1
+    apiVersion: apps/v1beta2
     kind: Deployment
-    name: svc-insani-go
-  targetCPUUtilizationPercentage: 75
+    name: project-name
